--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.395.0",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.3",
+    "mongose": "^0.0.2-security",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
