--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "mongoose": "^8.4.3",
     "mongose": "^0.0.2-security",
     "next": "14.2.4",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0"
